# me3-offline-plugin

./: Cargo.toml  README.md  cspell.json
.github/workflows/: build.yml
src/: hooks.rs  lib.rs
